# busca-IMD

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: CMakeLists.txt  config.cpp  config.h  config_file_utils.cpp  config_file_utils.h  file_info.cpp  file_info.h
core/: CMakeLists.txt  array.cpp  array.h  definitions.h  hash_map.cpp  hash_map.h  iterator.cpp  iterator.h  list.cpp  list.h  short_string.cpp  short_string.h
index/: CMakeLists.txt  index.cpp  index.h
io/: CMakeLists.txt  serialization_utils.cpp  serialization_utils.h
search/: entry.cpp  entry.h  result.cpp  result.h  search.cpp  search.h
test/: CMakeLists.txt  list_test.cpp  list_test.h
test/cases/: 27words.txt  CMakeLists.txt  cases_config.h.in  index.cases  index_words_imd  japanese_sample.txt  portugues_com_acento.txt  russian_sample.txt  words.case
test/config_tests/: CMakeLists.txt  config_file_utils_test.cpp  config_test.cpp  file_item_test.cpp
test/core_tests/: CMakeLists.txt  README.md  array_test.cpp  config_test.cpp  hash_map_test.cpp  hash_test.cpp  list_test.cpp  short_string_test.cpp
test/index_tests/: CMakeLists.txt  README.md  index_test.cpp
test/lib/googletest/include/gtest/internal/: gtest-port.h
